tsyringe inject and update documentation swagger
